Fix weird content overflow on mobile
On some pages that were using Jester component the content was pushing out of the max width and creating a horizontal scrollbar

--- a/web/assets/variables.scss
+++ b/web/assets/variables.scss
@@ -153,4 +153,7 @@ label[style].theme--light.v-label {
   .cookieControl .v-snack__wrapper {
     display: block;
   }
+  .overflow--hidden {
+    overflow: hidden;
+  }
 }
